Bug fix with width alignment

--- a/src/app/transactions/transactions.component.sass
+++ b/src/app/transactions/transactions.component.sass
@@ -1,9 +1,6 @@
 table 
     width: 100%
 
-.mat-card
-    width: 100%
-
 .mat-form-field 
     width: 50%
 
